Retarget entire solution to netcoreapp1.1
The code for FontFileLocator (to be committed soon) uses APIs
that are only available on netcoreapp, not on netstandard (even
netstandard2.0, which is currently in beta).

--- a/src/PDFSharp.Fonts.FontFileLocator/PDFSharp.Fonts.FontFileLocator.csproj
+++ b/src/PDFSharp.Fonts.FontFileLocator/PDFSharp.Fonts.FontFileLocator.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.0-beta-25108-01</NetStandardImplicitPackageVersion>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
   <Import Project="../dir.targets" />
