--- a/src/PDFSharp.Geometry/PDFSharp.Geometry.csproj
+++ b/src/PDFSharp.Geometry/PDFSharp.Geometry.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.0-beta-25108-01</NetStandardImplicitPackageVersion>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
   <Import Project="../dir.targets" />
