Add IFont to PDFSharp.Fonts project

--- a/src/PDFSharp.Fonts/PDFSharp.Fonts.csproj
+++ b/src/PDFSharp.Fonts/PDFSharp.Fonts.csproj
@@ -3,5 +3,9 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../PDFSharp.Geometry/PDFSharp.Geometry.csproj" />
+  </ItemGroup>
+
   <Import Project="../dir.targets" />
 </Project>
